<?xml version="1.0" encoding="utf-8"?>
<!--
        Name: Umar Khalid
        Matric Number: S1423449 -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selected_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="mpdproject.gcu.me.org.assignmenttest1.FeedSelected">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/titleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/planned_list_title"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/titleContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedData"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleTitle"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/durationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roadworksDate"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/titleContent"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/durationContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedData"
            android:layout_below="@+id/durationTitle"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="20sp"/>



        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriptionTitle"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/durationContent"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/descriptionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedData"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/descriptionTitle"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/pubDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pubDateTitle"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/descriptionContent"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/pubDateContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedData"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/pubDateTitle"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/MatricNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pubDateContent"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:text="Matric Number - S1423449"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </RelativeLayout>
</ScrollView>
